@@ -1,0 +1,49 @@
+P0	.equ 0x0ffc0
+P1	.equ 0x0ffc1
+P01CR	.equ 0x0ffc2
+IRFL	.equ 0x0ffc2
+IRFH	.equ 0x0ffc3
+P2	.equ 0x0ffc4
+P2CR	.equ 0x0ffc5
+P3	.equ 0x0ffc6
+P3CR	.equ 0x0ffc7
+P4	.equ 0x0ffc8
+P4CR	.equ 0x0ffc9
+P5	.equ 0x0ffca
+SMMOD	.equ 0x0ffcb
+P6	.equ 0x0ffcc
+P7	.equ 0x0ffcd
+P67CR	.equ 0x0ffce
+SMCR	.equ 0x0ffcf
+P8	.equ 0x0ffd0
+P8CR	.equ 0x0ffd1
+WDMOD	.equ 0x0ffd2
+WDCR	.equ 0x0ffd3
+TREG0	.equ 0x0ffd4
+TREG1	.equ 0x0ffd5
+TREG2	.equ 0x0ffd6
+TREG3	.equ 0x0ffd7
+TCLK	.equ 0x0ffd8
+TFFCR	.equ 0x0ffd9
+TMOD	.equ 0x0ffda
+TRUN	.equ 0x0ffdb
+CAP1L	.equ 0x0ffdc
+CAP1H	.equ 0x0ffdd
+CAP2L	.equ 0x0ffde
+CAL2H	.equ 0x0ffdf
+TREG4L	.equ 0x0ffe0
+TREG4H	.equ 0x0ffe1
+TREG5L	.equ 0x0ffe2
+TREG5H	.equ 0x0ffe3
+T4MOD	.equ 0x0ffe4
+T4FFCR	.equ 0x0ffe5
+INTEL	.equ 0x0ffe6
+INTEH	.equ 0x0ffe7
+DMAEH	.equ 0x0ffe8
+SCMOD	.equ 0x0ffe9
+SCCR	.equ 0x0ffea
+SCBUF	.equ 0x0ffeb
+BX	.equ 0x0ffec
+BY	.equ 0x0ffed
+ADREG	.equ 0x0ffee
+ADMOD	.equ 0x0ffef
